--- a/Rhymes.html
+++ b/Rhymes.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
         <title>List Of Rhymes</title>
-		<link rel="stylesheet" type="text/css" href="bicboi.css" />
+		<link rel="stylesheet" type="text/css" href="main.css" />
 	</head>
 <body>
 		<!-- Navigation bar -->
