--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
         <title>Words That Rhyme With Orange</title>
-		<link rel="stylesheet" type="text/css" href="bicboi.css" />
+		<link rel="stylesheet" type="text/css" href="main.css" />
 	</head>
 	<body>
 		<!-- anchor for link to top of page -->
