--- a/apology.html
+++ b/apology.html
@@ -17,9 +17,14 @@
         <h1 id="topofthepage">APOLOGY</h1>
 		<h1 class="headings1">Official Apology From The Oxford English Dictionary</h1>
     	<p class="lol"><span>&ldquo; In the morning of December 28th 2016 <a href="http://www.oed.com/">The Oxford English Dictionary</a> issued out a racist, xenophobic and overall unacceptable response to a claim by the renowned orange activist &ldquo;Eminem&rdquo;, formally known as &ldquo;Marshall Bruce Mathers III,&rdquo; the Oxford English Dictionary would like to apologize and request the forgiveness of the Orange community and others we may have hurt or offended, our organization is focused on providing an accessible directory for the English vocabulary and the statement we made was out of line and irrelevant to our cause, we would like to apologize by donating $10'000'000 to the &ldquo;Orange Cross Organization&rdquo; which helps provide shelter and food for the oranges of the world.&rdquo;</span></p>
-      <a href="http://validator.w3.org/check?uri=referer"><img
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Ftamanthony.github.io%2Fhome%2Fapology.html"><img
           src="https://www.w3.org/Icons/valid-html401"
           alt="Valid HTML 4.01!" height="31" width="88" /></a>
+          <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Ftamanthony.github.io%2Fhome%2F&profile=css3&usermedium=all&warning=1&vextwarning=&lang=en">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
     </body>
 
 </html>
