--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         		<p>In response to claims made by rapper &ldquo;Eminem,&rdquo; that many words could be rhymed and should be rhymed with orange, the Oxford English Dictionary made a controversial and orange-phobic claim that the only word which rhymed with orange is &ldquo;sporange,&rdquo; which is a great disgrace and offense to the orange-kind, 4 hours following the statement, Oxford English Dictionary retracted the statement and issued an <a href="apology.html">apology</a>. </p>
     <!-- link back to top of page -->
     <a id="backtotop" href="#top">Back To Top of Page</a>
-      <a href="http://validator.w3.org/check?uri=referer"><img
-          src="https://www.w3.org/Icons/valid-html401"
-          alt="Valid HTML 4.01!" height="31" width="88" /></a>
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Ftamanthony.github.io%2Fhome%2F"><img src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01!" height="31" width="88" /></a>
+      <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Ftamanthony.github.io%2Fhome%2F&profile=css3&usermedium=all&warning=1&vextwarning=&lang=en">
+        <img style="border:0;width:88px;height:31px"
+            src="http://jigsaw.w3.org/css-validator/images/vcss"
+            alt="Valid CSS!" />
+    </a>
     </body>
 
 </html>
