--- a/Rhymes.html
+++ b/Rhymes.html
@@ -36,10 +36,10 @@
 Oranges, peach, pears, plums, syringes
 Vrinn, vrinn! Yeah, here I come I'm inches</p>
  <p>
-      <a href="http://validator.w3.org/check?uri=referer"><img
+      <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Ftamanthony.github.io%2Fhome%2FRhymes.html"><img
           src="https://www.w3.org/Icons/valid-html401"
           alt="Valid HTML 4.01!" height="31" width="88" /></a>
-    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Ftamanthony.github.io%2Fhome%2F&profile=css3&usermedium=all&warning=1&vextwarning=&lang=en">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
             alt="Valid CSS!" />
